...
    <string name="leaderboard_failed_to_fetch">The leaderboard could not be fetched.</string>
    <string name="question_close_grabble">Do you want to close Grabble?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit_dialog_title">Close game?</string>
    <string name="welcome_to_grabble">Welcome to Grabble. Enjoy!</string>
    <string name="okay">OK</string>
</resources>

